<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:showIn="@layout/activity_coordinator_main">>


    <LinearLayout
        android:id="@+id/values_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Spinner
            android:id="@+id/pick_up"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="@color/colorAccent"
            android:outlineSpotShadowColor="@color/colorAccent" />

        <Spinner
            android:id="@+id/type"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="@color/colorAccent"
            android:outlineSpotShadowColor="@color/colorAccent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From:  "
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="25dp"
                android:autofillHints=""
                android:inputType="date"
                android:text="dd/mm/aaaa"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To:  "
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:inputType="date"
                android:text="aaaa-mm-dd"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/show-hide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/colorAccent"
            android:text="Hide"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/colorAccent"
            android:text="Search"
            android:textColor="#ffffff" />


    </LinearLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
